# easi-grid

./: CHANGELOG.md  README.md  pyproject.toml
examples/: basic_usage.ipynb
src/easi_grid/: __init__.py  presets.py
src/gridinit/: __init__.py  presets.py
tests/: test_griddefinition.py
