[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gridinit"
description = "Small python tool to initialize polar grids from code or from a yaml config file"
readme = "README.md"
version = "0.1"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Stefan Hendricks", email = "stefan.hendricks@awi.de" },
]
classifiers = [
  "Topic :: Scientific/Engineering",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
    "numpy",
    "pydantic",
    "pyproj",
    "xarray"
]

[project.optional-dependencies]
tests = [
    "flake8",
    "isort",
    "pytest",
    "coverage"
]
dev = [
    "matplotlib"
    ""
]
